tests/typecheck/should_fail/TyAppPat_NonlinearMultiAppPat.stderr

TyAppPat_NonlinearMultiAppPat.hs:13:13: error: [GHC-10498]
    • Conflicting definitions for ‘a’
      Bound at: TyAppPat_NonlinearMultiAppPat.hs:13:13
                TyAppPat_NonlinearMultiAppPat.hs:13:16
    • In an equation for ‘foo’
